GH-29 feat(docs): adding note about calling update() on programmatic resize events

--- a/demo/responsive.html
+++ b/demo/responsive.html
@@ -80,6 +80,8 @@
       <article class="slide">Slide 6</article>
     </x-slider>
 
+    <p>Note that if the width or the height of <code>&lt;x-slider&gt;</code> is changed programmatically (e.g. not caused by a page resize), a call to the <code>update()</code> function is needed in order to have the component functioning correctly.</p>
+
     <script>
       const slider = document.querySelector('x-slider');
 
