GH-32 feat(noslides): do not throw when there's no sldes in the lightDOM

--- a/src/x-slider.html
+++ b/src/x-slider.html
@@ -1,6 +1,8 @@
 <div id="externalWrapper">
   <div id="slidesWrapper">
-    <slot id="slidesSlot"><p>No content available</p></slot>
+    <slot id="slidesSlot">
+      <p class="slidesFallback">No content available</p>
+    </slot>
   </div>
 </div>
 
