GH-32 test(no-slides)

--- a/demo/events.html
+++ b/demo/events.html
@@ -41,7 +41,7 @@
       }
     </style>
 
-    <x-slider>
+    <x-slider selected="2">
       <article class="slide">Slide 1</article>
       <article class="slide">Slide 2</article>
       <article class="slide">Slide 3</article>
