GH-35 fix(navigation): refactor nav buttons into separate component

--- a/demo/custom-navigation.html
+++ b/demo/custom-navigation.html
@@ -51,8 +51,8 @@
          * properties, the navigation buttons can be vertically aligned in
          * a different way (they are centered by default).
          */
-        transform: none;
-        top: 0;
+        transform: none !important;
+        top: 0 !important;
       }
 
       .slide {
