GH-35 feat(pagination): adding border to pagination indicators

--- a/demo/custom-pagination.html
+++ b/demo/custom-pagination.html
@@ -20,7 +20,9 @@
 
         /* Change the dots color */
         --x-slider-pagination-color: #ced20c;
-        --x-slider-pagination-color-selected: #a39800;
+        /* CHange the aspect of the selected dot */
+        --x-slider-pagination-color-selected: #fff;
+        --x-slider-pagination-border-selected: 2px solid #a39800;
         /* Change the dots size */
         --x-slider-pagination-size-clickable: 32px;
         --x-slider-pagination-size-dot: 16px;
