GH-37 feat(drag): dynamic thresholds

--- a/demo/base.html
+++ b/demo/base.html
@@ -39,11 +39,19 @@
       or also navigated by programmatically calling next(), previous(), or
       by setting the `selected` property.
     -->
-    <x-slider>
+    <x-slider slides-per-view="3">
       <article class="slide">Slide 1</article>
       <article class="slide">Slide 2</article>
       <article class="slide">Slide 3</article>
       <article class="slide">Slide 4</article>
+      <article class="slide">Slide 5</article>
+      <article class="slide">Slide 6</article>
+      <article class="slide">Slide 7</article>
+      <article class="slide">Slide 8</article>
+      <article class="slide">Slide 9</article>
+      <article class="slide">Slide 10</article>
+      <article class="slide">Slide 11</article>
+      <article class="slide">Slide 12</article>
     </x-slider>
   </template>
 
