refactor(name): <x-slider> ==> <macro-carousel>

--- a/demo/auto-focus.html
+++ b/demo/auto-focus.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Auto focus - x-slider demo</title>
+  <title>Auto focus - macro-carousel demo</title>
 
   <link rel="stylesheet" href="css/third-party/prism.css">
   <link rel="stylesheet" href="css/demo.css">
@@ -15,7 +15,7 @@
 
   <template id="demoTemplate">
     <style>
-      x-slider {
+      macro-carousel {
         height: 300px;
       }
 
@@ -34,17 +34,17 @@
     </style>
 
     <!--
-      When the `auto-focus` attribute is added, x-slider automatically focuses
+      When the `auto-focus` attribute is added, macro-carousel automatically focuses
       a slide when it get selected. This behaviour can improve the a11y of the
       carousel, but at the same time can also force the browser to scroll the
       crousel into view.
     -->
-    <x-slider auto-focus>
+    <macro-carousel auto-focus>
       <article class="slide">Slide 1</article>
       <article class="slide">Slide 2</article>
       <article class="slide">Slide 3</article>
       <article class="slide">Slide 4</article>
-    </x-slider>
+    </macro-carousel>
   </template>
 
   <script defer src="js/third-party/inert.min.js"></script>
