--- a/demo/es5.html
+++ b/demo/es5.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Basic Usage - x-slider demo</title>
+  <title>Basic Usage - macro-carousel demo</title>
 
   <link rel="stylesheet" href="css/third-party/prism.css">
   <link rel="stylesheet" href="css/demo.css">
@@ -13,7 +13,7 @@
   <h1 id="title">Basic usage</h1>
   <p>In order to make this demo work with older browsers, this demo is slightly different from the rest of the demos: (have a look at this page's source code)</p>
   <ul>
-    <li>the transpiled version of <code>&lt;x-slider&gt;</code> is used instead (see demo.js)</li>
+    <li>the transpiled version of <code>&lt;macro-carousel&gt;</code> is used instead (see demo.js)</li>
     <li>the set of <code>babel-polyfills</code> is added before importing anything else</li>
     <li>the <code>custom-elements-es5-adapter</code> is run for browsers supporting CustomElements v1</li>
     <li><code>webcomponents-lite.js</code> is used instead of <code>webcomponents-loader.js</code></li>
@@ -22,8 +22,9 @@
 
   <template id="demoTemplate">
     <style>
-      x-slider {
+      macro-carousel {
         height: 300px;
+        padding: 0 60px;
       }
 
       .slide {
@@ -41,17 +42,17 @@
     </style>
 
     <!--
-      The basic version of x-slider doesn't show any UI that allows the
+      The basic version of macro-carousel doesn't show any UI that allows the
       user to navigate through its slides. The slides can still be dragged,
       or also navigated by programmatically calling next(), previous(), or
       by setting the `selected` property.
     -->
-    <x-slider slides-per-view="2" navigation>
+    <macro-carousel slides-per-view="2" navigation>
       <article class="slide">Slide 1</article>
       <article class="slide">Slide 2</article>
       <article class="slide">Slide 3</article>
       <article class="slide">Slide 4</article>
-    </x-slider>
+    </macro-carousel>
   </template>
 
   <!-- ES5 babel-polyfill -->
