--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>x-slider demos</title>
+  <title>macro-carousel demos</title>
   <style>
     /* System Fonts as used by Medium and WordPress */
     body {
@@ -35,7 +35,7 @@
   </style>
 </head>
 <body>
-  <h1><code>x-slider</code> demos</h1>
+  <h1><code>macro-carousel</code> demos</h1>
   <ul>
     <li><a href="base.html">Basic usage</a></li>
     <li><a href="navigation.html">Default navigation (previous/next)</a></li>
@@ -47,7 +47,7 @@
     <li><a href="slides-per-view.html">Multiple slides per view</a></li>
     <li><a href="auto-focus.html">Auto focus</a></li>
     <li><a href="reduced-motion.html">Reduced motion</a></li>
-    <li><a href="events.html">Consuming the <code>x-slider-selected-changed</code> event</a></li>
+    <li><a href="events.html">Consuming the <code>macro-carousel-selected-changed</code> event</a></li>
     <li><a href="add-remove.html">Adding/removing slides</a></li>
     <li><a href="layout.html">Layout options</a></li>
     <li><a href="responsive.html">Responsive</a></li>
