--- a/demo/add-remove.html
+++ b/demo/add-remove.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Add/Remove slide - x-slider demo</title>
+  <title>Add/Remove slide - macro-carousel demo</title>
 
   <link rel="stylesheet" href="css/third-party/prism.css">
   <link rel="stylesheet" href="css/demo.css">
@@ -15,9 +15,9 @@
 
   <template id="demoTemplate">
     <style>
-      x-slider {
+      macro-carousel {
         height: 300px;
-        padding: 0 calc(10px + var(--x-slider-navigation-button-size));
+        padding: 0 calc(10px + var(--macro-carousel-navigation-button-size));
         margin: 0 10px;
       }
 
@@ -36,22 +36,22 @@
     </style>
 
     <!--
-      Setting `pagination` and `navigation` to show how `x-slider` automatically
+      Setting `pagination` and `navigation` to show how `macro-carousel` automatically
       updates itself after a slide is added/removed.
       Both the pagination dots and the navigation arrows update automatically in
       order to reflect the new number of slides.
     -->
-    <x-slider navigation pagination>
+    <macro-carousel navigation pagination>
       <article class="slide">Slide 1</article>
       <article class="slide">Slide 2</article>
       <article class="slide">Slide 3</article>
       <article class="slide">Slide 4</article>
-    </x-slider>
+    </macro-carousel>
     <button id="append" disabled>Append slide</button>
     <button id="remove" disabled>Remove last slide</button>
 
     <script>
-      const slider = document.querySelector('x-slider');
+      const slider = document.querySelector('macro-carousel');
       const appendBtn = document.querySelector('#append');
       const removeBtn = document.querySelector('#remove');
 
@@ -94,7 +94,7 @@
       }
 
       function onWCReady() {
-        customElements.whenDefined('x-slider').then(() => {
+        customElements.whenDefined('macro-carousel').then(() => {
           appendBtn.addEventListener('click', appendSlide);
           removeBtn.addEventListener('click', removeSlide);
 
