--- a/demo/base.html
+++ b/demo/base.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Basic Usage - x-slider demo</title>
+  <title>Basic Usage - macro-carousel demo</title>
 
   <link rel="stylesheet" href="css/third-party/prism.css">
   <link rel="stylesheet" href="css/demo.css">
@@ -15,7 +15,7 @@
 
   <template id="demoTemplate">
     <style>
-      x-slider {
+      macro-carousel {
         height: 300px;
       }
 
@@ -34,25 +34,19 @@
     </style>
 
     <!--
-      The basic version of x-slider doesn't show any UI that allows the
+      The basic version of macro-carousel doesn't show any UI that allows the
       user to navigate through its slides. The slides can still be dragged,
       or also navigated by programmatically calling next(), previous(), or
       by setting the `selected` property.
     -->
-    <x-slider slides-per-view="3">
+    <macro-carousel>
       <article class="slide">Slide 1</article>
       <article class="slide">Slide 2</article>
       <article class="slide">Slide 3</article>
       <article class="slide">Slide 4</article>
       <article class="slide">Slide 5</article>
       <article class="slide">Slide 6</article>
-      <article class="slide">Slide 7</article>
-      <article class="slide">Slide 8</article>
-      <article class="slide">Slide 9</article>
-      <article class="slide">Slide 10</article>
-      <article class="slide">Slide 11</article>
-      <article class="slide">Slide 12</article>
-    </x-slider>
+    </macro-carousel>
   </template>
 
   <script defer src="js/third-party/inert.min.js"></script>
