--- a/demo/custom-navigation.html
+++ b/demo/custom-navigation.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Custom navigation - x-slider demo</title>
+  <title>Custom navigation - macro-carousel demo</title>
 
   <link rel="stylesheet" href="css/third-party/prism.css">
   <link rel="stylesheet" href="css/demo.css">
@@ -15,21 +15,21 @@
 
   <template id="demoTemplate">
     <style>
-      x-slider {
+      macro-carousel {
         height: 300px;
-        padding: 0 calc(10px + var(--x-slider-navigation-button-size));
+        padding: 0 calc(10px + var(--macro-carousel-navigation-button-size));
         margin: 0 10px;
 
-        --x-slider-navigation-color: #ff0844;
-        --x-slider-navigation-color-focus: #fff;
-        --x-slider-navigation-color-background: #ffe5dd;
-        --x-slider-navigation-color-background-focus: #ff0844;
-        --x-slider-navigation-button-size: 72px;
-        --x-slider-navigation-icon-size: 40px;
+        --macro-carousel-navigation-color: #ff0844;
+        --macro-carousel-navigation-color-focus: #fff;
+        --macro-carousel-navigation-color-background: #ffe5dd;
+        --macro-carousel-navigation-color-background-focus: #ff0844;
+        --macro-carousel-navigation-button-size: 72px;
+        --macro-carousel-navigation-icon-size: 40px;
 
         /*
          * It is possible to override the shape of the previous and next
-         * arrows by changing the --x-slider-navigation-icon-mask property. This
+         * arrows by changing the --macro-carousel-navigation-icon-mask property. This
          * property is used as a value for the `mask-image` CSS property.
          * https://codepen.io/tigt/post/optimizing-svgs-in-data-uris
          *
@@ -37,14 +37,14 @@
          * https://codepen.io/tigt/post/optimizing-svgs-in-data-uris.
          * You can see the original SVG asset in /demo/images/arrow-left-alt.svg
          */
-        --x-slider-navigation-icon-mask: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64' fill='%23000'%3E %3Cpath fill-rule='evenodd' d='M47 2L32 32l15 30-29-30L47 2z'/%3E %3C/svg%3E");
+        --macro-carousel-navigation-icon-mask: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64' fill='%23000'%3E %3Cpath fill-rule='evenodd' d='M47 2L32 32l15 30-29-30L47 2z'/%3E %3C/svg%3E");
       }
 
       /* Previous and next buttons */
-      .x-slider-previous,
-      .x-slider-next {
+      .macro-carousel-previous,
+      .macro-carousel-next {
         border-radius: 0;
-        border: 1px solid var(--x-slider-navigation-color);
+        border: 1px solid var(--macro-carousel-navigation-color);
 
         /*
          * By tweaking the `top` (and/or `bottom`) and the `transform` CSS
@@ -70,23 +70,23 @@
     </style>
 
     <!-- `navigation` adds previous and next buttons -->
-    <x-slider navigation>
+    <macro-carousel navigation>
       <article class="slide">Slide 1</article>
       <article class="slide">Slide 2</article>
       <article class="slide">Slide 3</article>
       <article class="slide">Slide 4</article>
-    </x-slider>
-    <p>If the CSS properties to customize the <code>x-slider</code> navigation buttons are not enough for your needs, you can always use any custom UI and call the `previous()` and `next()` methods.</p>
+    </macro-carousel>
+    <p>If the CSS properties to customize the <code>macro-carousel</code> navigation buttons are not enough for your needs, you can always use any custom UI and call the `previous()` and `next()` methods.</p>
     <button id="custom-previous">Custom previous button</button>
     <button id="custom-next">Custom next button</button>
 
     <script>
-      const slider = document.querySelector('x-slider');
+      const slider = document.querySelector('macro-carousel');
       const customPreviousBtn = document.querySelector('#custom-previous');
       const customNextBtn = document.querySelector('#custom-next');
 
       function onWCReady() {
-        customElements.whenDefined('x-slider').then(() => {
+        customElements.whenDefined('macro-carousel').then(() => {
           customPreviousBtn.addEventListener('click', () => {
             slider.previous();
           });
