--- a/demo/pagination.html
+++ b/demo/pagination.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Pagination - x-slider demo</title>
+  <title>Pagination - macro-carousel demo</title>
 
   <link rel="stylesheet" href="css/third-party/prism.css">
   <link rel="stylesheet" href="css/demo.css">
@@ -15,7 +15,7 @@
 
   <template id="demoTemplate">
     <style>
-      x-slider {
+      macro-carousel {
         height: 300px;
       }
 
@@ -34,12 +34,12 @@
     </style>
 
     <!-- `pagination` adds the pagination indicators (dots) -->
-    <x-slider pagination>
+    <macro-carousel pagination>
       <article class="slide">Slide 1</article>
       <article class="slide">Slide 2</article>
       <article class="slide">Slide 3</article>
       <article class="slide">Slide 4</article>
-    </x-slider>
+    </macro-carousel>
   </template>
 
   <script defer src="js/third-party/inert.min.js"></script>
