--- a/demo/pre-defined-styles.html
+++ b/demo/pre-defined-styles.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Avoiding flashing content (loading strategies) - x-slider demo</title>
+  <title>Avoiding flashing content (loading strategies) - macro-carousel demo</title>
 
   <link rel="stylesheet" href="css/third-party/prism.css">
   <link rel="stylesheet" href="css/demo.css">
@@ -15,7 +15,7 @@
 
   <template id="demoTemplate">
     <style>
-      x-slider {
+      macro-carousel {
         height: 300px;
         padding: 0 60px;
       }
@@ -38,11 +38,11 @@
        * Custom Element before it's registered. Here we're making the slider
        * a flex container, and the slider 100% its width (in this
        * example, slidesPerView=1). This way, there isn't going to be any flash
-       * when the x-slider compoent gets registered as a Custom Element.
+       * when the macro-carousel compoent gets registered as a Custom Element.
        * To see the flash happen, see the base.html example.
        * https://developers.google.com/web/fundamentals/web-components/customelements#prestyle
        */
-      x-slider:not(:defined) {
+      macro-carousel:not(:defined) {
         display: flex;
         flex-wrap: nowrap;
         overflow-x: auto;
@@ -56,17 +56,17 @@
         margin: 0 60px;
       }
 
-      x-slider:not(:defined) > .slide {
+      macro-carousel:not(:defined) > .slide {
         flex: 0 0 100%;
       }
     </style>
 
-    <x-slider navigation>
+    <macro-carousel navigation>
       <article class="slide">Slide 1</article>
       <article class="slide">Slide 2</article>
       <article class="slide">Slide 3</article>
       <article class="slide">Slide 4</article>
-    </x-slider>
+    </macro-carousel>
   </template>
 
   <script defer src="js/third-party/inert.min.js"></script>
