--- a/demo/slides-per-view.html
+++ b/demo/slides-per-view.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Multiple slides per view - x-slider demo</title>
+  <title>Multiple slides per view - macro-carousel demo</title>
 
   <link rel="stylesheet" href="css/third-party/prism.css">
   <link rel="stylesheet" href="css/demo.css">
@@ -15,7 +15,7 @@
 
   <template id="demoTemplate">
     <style>
-      x-slider {
+      macro-carousel {
         height: 300px;
       }
 
@@ -36,7 +36,7 @@
     <!--
       `slides-per-view` controls how many slides are seen at the same time.
     -->
-    <x-slider slides-per-view="3">
+    <macro-carousel slides-per-view="3">
       <article class="slide">Slide 1</article>
       <article class="slide">Slide 2</article>
       <article class="slide">Slide 3</article>
@@ -46,7 +46,7 @@
       <article class="slide">Slide 7</article>
       <article class="slide">Slide 8</article>
       <article class="slide">Slide 9</article>
-    </x-slider>
+    </macro-carousel>
   </template>
 
   <script defer src="js/third-party/inert.min.js"></script>
