fix(demo): using CustomStyleInterface library

--- a/demo/auto-focus.html
+++ b/demo/auto-focus.html
@@ -52,5 +52,6 @@
   <script defer src="js/third-party/prism.js" data-manual></script>
   <script defer src="js/demo.js"></script>
   <script defer src="js/third-party/webcomponents-loader.js"></script>
+  <script defer src="js/third-party/custom-style-interface.min.js"></script>
 </body>
 </html>
