--- a/demo/es5.html
+++ b/demo/es5.html
@@ -65,5 +65,6 @@
   <script defer src="js/third-party/custom-elements-es5-adapter.js"></script>
   <!--! do not remove -->
   <script defer src="js/third-party/webcomponents-lite.js"></script>
+  <script defer src="js/third-party/custom-style-interface.min.js"></script>
 </body>
 </html>
