--- a/demo/reduced-motion.html
+++ b/demo/reduced-motion.html
@@ -50,5 +50,6 @@
   <script defer src="js/third-party/prism.js" data-manual></script>
   <script defer src="js/demo.js"></script>
   <script defer src="js/third-party/webcomponents-loader.js"></script>
+  <script defer src="js/third-party/custom-style-interface.min.js"></script>
 </body>
 </html>
