fix(demo): rewriting styles so that they work better with the polyfills

--- a/demo/add-remove.html
+++ b/demo/add-remove.html
@@ -17,7 +17,7 @@
     <style>
       macro-carousel {
         height: 300px;
-        padding: 0 calc(10px + var(--macro-carousel-navigation-button-size));
+        padding: 0 60px;
         margin: 0 10px;
       }
 
