--- a/demo/custom-pagination.html
+++ b/demo/custom-pagination.html
@@ -17,15 +17,6 @@
     <style>
       macro-carousel {
         height: 300px;
-
-        /* Change the dots color */
-        --macro-carousel-pagination-color: #ced20c;
-        /* CHange the aspect of the selected dot */
-        --macro-carousel-pagination-color-selected: #fff;
-        --macro-carousel-pagination-border-selected: 2px solid #a39800;
-        /* Change the dots size */
-        --macro-carousel-pagination-size-clickable: 32px;
-        --macro-carousel-pagination-size-dot: 16px;
         /* Change the gap between dots */
         --macro-carousel-pagination-gap: 6px;
         /* Change the height of the pagination container */
@@ -43,6 +34,17 @@
         color: white;
         font-size: 5em;
         font-family: sans-serif;
+      }
+
+      macro-carousel-pagination-indicator {
+        /* Change the dots color */
+        --macro-carousel-pagination-color: #ced20c;
+        /* CHange the aspect of the selected dot */
+        --macro-carousel-pagination-color-selected: #fff;
+        --macro-carousel-pagination-border-selected: 2px solid #a39800;
+        /* Change the dots size */
+        --macro-carousel-pagination-size-clickable: 32px;
+        --macro-carousel-pagination-size-dot: 16px;
       }
     </style>
 
