--- a/demo/navigation.html
+++ b/demo/navigation.html
@@ -17,7 +17,7 @@
     <style>
       macro-carousel {
         height: 300px;
-        padding: 0 calc(10px + var(--macro-carousel-navigation-button-size));
+        padding: 0 60px;
         margin: 0 10px;
       }
 
