feat(demos): polishing demos

--- a/demo/custom-navigation.html
+++ b/demo/custom-navigation.html
@@ -81,7 +81,7 @@
       <article class="slide">Slide 3</article>
       <article class="slide">Slide 4</article>
     </macro-carousel>
-    <p>If the CSS properties to customize the <code>macro-carousel</code> navigation buttons are not enough for your needs, you can always use any custom UI and call the `previous()` and `next()` methods.</p>
+    <p>If the CSS properties to customize the <code>macro-carousel</code> navigation buttons are not enough for your needs, you can always use any custom UI and call the <code>previous()</code> and <code>next()</code> functions.</p>
     <button id="custom-previous">Custom previous button</button>
     <button id="custom-next">Custom next button</button>
 
