--- a/demo/es5.html
+++ b/demo/es5.html
@@ -15,8 +15,7 @@
   <ul>
     <li>the transpiled version of <code>&lt;macro-carousel&gt;</code> is used instead (see demo.js)</li>
     <li>the set of <code>babel-polyfills</code> is added before importing anything else</li>
-    <li>the <code>custom-elements-es5-adapter</code> is run for browsers supporting CustomElements v1</li>
-    <li><code>webcomponents-lite.js</code> is used instead of <code>webcomponents-loader.js</code></li>
+    <li>the <code>custom-elements-es5-adapter</code> is added to the page before running any Web Components related code</li>
   </ul>
   <a id="backToIndex" href="index.html">See all demos</a>
 
@@ -60,11 +59,8 @@
   <script defer src="js/third-party/inert.min.js"></script>
   <script defer src="js/third-party/focus-visible.js"></script>
   <script defer src="js/third-party/prism.js" data-manual></script>
-  <script defer src="js/demo.js"></script>
-  <script>if (!window.customElements) { document.write('<!--'); }</script>
   <script defer src="js/third-party/custom-elements-es5-adapter.js"></script>
-  <!--! do not remove -->
-  <script defer src="js/third-party/webcomponents-lite.js"></script>
-  <script defer src="js/third-party/custom-style-interface.min.js"></script>
+  <script defer src="js/third-party/webcomponents-bundle.js"></script>
+  <script defer src="js/demo.js"></script>
 </body>
 </html>
